src/test/ui/type-alias-impl-trait/bound_reduction2.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/bound_reduction2.rs:16:5
   |
LL |     ()
   |     ^^
   |
note: used non-generic type `<T as TraitWithAssoc>::Assoc` for generic parameter
  --> $DIR/bound_reduction2.rs:9:10
   |
LL | type Foo<V> = impl Trait<V>;
   |          ^

error: aborting due to previous error

